<resources>
    <string name="app_name">ModuleArchitecture</string>
    <string name="title_features">Features</string>
    <string name="title_home">Home</string>
    <string name="title_mpin">Module Title</string>
    <string name="title_login">Login</string>
    <string name="title_player_feeds">PlayerFeeds</string>
    <string name="title_insta_feeds">InstaFeeds</string>
    <string name="title_launcher">Launcher</string>
    <string name="title_feed">Module Title</string>
    <string name="title_finger">Module Title</string>
    <string name="title_material_component">MaterialComponent</string>
    <string name="user_name">User Name</string>
    <string name="ok">OK</string>
    <string name="title_google_login">GoogleLogin</string>
    <string name="title_googlelogin">glogin</string>
    <string name="title_facebook_login">FacebookLogin</string>

    <string name="apikey">AIzaSyDJj3mE824QZiXId6naVyHnumzW7KJfjxw</string>
    <string name="facebook_app_id">475841799170709</string>
    <string name="fb_login_protocol_scheme">fb475841799170709</string>

    <string name="title_profile">Profile</string>
    <string name="title_fblogin">FaceBook Login</string>
    <string name="title_signup">Signup</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="transition_title">Transition</string>
    <string name="transition_like">Like</string>
    <string name="transition_comment">Comment</string>
    <string name="transition_view">View</string>
</resources>
