<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.aucto.model.MediaType" />

        <variable
            name="itemClick"
            type="com.aucto.core.BaseAdapter.OnItemClickListener" />

        <variable
            name="item"
            type="com.aucto.model.InstaFeed" />

        <variable
            name="position"
            type="Integer" />

        <variable
            name="pagerAdapter"
            type="com.aucto.feeds.adapter.SlidingImageAdapter" />

        <variable
            name="isPlaying"
            type="androidx.databinding.ObservableBoolean" />

        <variable
            name="isFave"
            type="androidx.databinding.ObservableBoolean" />

        <variable
            name="likeCount"
            type="androidx.databinding.ObservableInt" />
    </data>

    <com.google.android.exoplayer2.ui.AspectRatioFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:resize_mode="fixed_width">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginRight="@dimen/_10dp"
            android:onClick="@{(v)-> itemClick.onItemClick(item,v)}"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_10dp"
                android:paddingBottom="@dimen/_10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/userProfile"
                    loadCircularImage="@{item.instaUser.profilePicture}"
                    android:layout_width="@dimen/_50dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textTitle"
                    style="@style/Material.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:gravity="center_vertical"
                    android:text="@{item.instaUser.username}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/userProfile"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="title" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Material.SubTitle2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:text="Indore, India"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/userProfile"
                    app:layout_constraintTop_toBottomOf="@id/textTitle" />

                <FrameLayout
                    android:id="@+id/mediaContainer"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:paddingTop="@dimen/_10dp"
                    android:paddingBottom="@dimen/_10dp"
                    app:layout_constraintTop_toBottomOf="@+id/userProfile">

                    <com.google.android.exoplayer2.ui.PlayerView
                        android:id="@+id/playerView"
                        visibleIf="@{item.type != MediaType.IMAGE.value}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:controller_layout_id="@layout/exo_playback_controls"
                        app:show_buffering="always"
                        app:shutter_background_color="?attr/colorButtonNormal"
                        app:surface_type="surface_view"
                        app:use_artwork="false" />

                    <ImageView
                        android:id="@+id/imageView"
                        imageUrl="@{item.images.standardResolution.url}"
                        visibleIf="@{item.type == MediaType.IMAGE.value || !isPlaying}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:transitionName="@string/transition_title" />

                    <ImageView
                        android:id="@+id/imageView2"
                        visibleIf="@{item.type == MediaType.MP3.value}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/music_bg_thumbnail"
                        android:transitionName="@string/transition_title" />

                </FrameLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50dp"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_marginRight="@dimen/_10dp"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    app:layout_constraintTop_toBottomOf="@+id/mediaContainer">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/viewsButton"
                        style="@style/Material.SubTitle2.WithDrawable"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_eye"
                        android:drawablePadding="@dimen/_5dp"
                        android:gravity="center_vertical"
                        android:text="0 Views"
                        android:transitionName="@string/transition_view" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/likeButton"
                        style="@style/Material.SubTitle2.WithDrawable"
                        favTint="@{isFave}"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:drawableStart="@{!isFave ? @drawable/ic_like_outline : @drawable/ic_fill_heart}"
                        android:drawablePadding="@dimen/_5dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:onClick="@{(v)-> itemClick.onViewClicked(v,item,position)}"
                        android:text="@{!isFave ? String.valueOf(item.likes.count)+` Likes` : String.valueOf(item.likes.count+1)+` Likes`}"
                        android:transitionName="@string/transition_like" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/commentButton"
                        style="@style/Material.SubTitle2.WithDrawable"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:drawableStart="@drawable/ic_comment"
                        android:drawablePadding="@dimen/_5dp"
                        android:gravity="center_vertical"
                        android:text="@{String.valueOf(item.comments.count)+` Comments`}"
                        android:transitionName="@string/transition_comment" />

                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </com.google.android.exoplayer2.ui.AspectRatioFrameLayout>
</layout>